Change overflow scroll to auto to avoid show an inactive scroll

--- a/src/app/module-viewer/ice/ice.component.sass
+++ b/src/app/module-viewer/ice/ice.component.sass
@@ -115,6 +115,6 @@ textarea
         margin-right: 10px
 
 .comment-list
-  overflow-y: scroll
+  overflow-y: auto
   height: auto
   max-height: 300px
